--- a/detail.html
+++ b/detail.html
@@ -9,8 +9,7 @@
 
 <body>
     <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0" nonce="sRTErsVK"></script>
-    <div id="page">
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0" nonce="OlA1yu5F"></script>
         <header>
 
             <div class="top-right">
@@ -44,6 +43,7 @@
                     <div class="detail-img">
                         <img src="image/hinh1.jpg">
                     </div>
+                    <div class="fb-like" data-href="https://vanmtb.github.io/van/" data-width="" data-layout="box_count" data-action="like" data-size="small" data-share="true"></div>
                     <div class="detail-thongtin">
                         <h2> Chi tiết sản phẩm</h2>
                         <div class="detail-thong tin-body">
