--- a/detail.html
+++ b/detail.html
@@ -20,7 +20,7 @@
         </header>
         <nav class="menu">
             <ul>
-                <li> <a href="trangchu.html">Trang chủ</a></li>|
+                <li> <a href="index.html">Trang chủ</a></li>|
                 <li> <a href="danhmuc.html">Danh mục</a></li>|
                 <li> <a href="">Liên hệ</a>
                     <ul>
