--- a/detail.html
+++ b/detail.html
@@ -71,6 +71,7 @@
         </section>
         <footer> 2021 - Kho Sách</footer>
     </div>
+    <script src="https://uhchat.net/code.php?f=b26d51"></script>
 </body>
 
 </html>
