--- a/danhmuc.html
+++ b/danhmuc.html
@@ -17,7 +17,7 @@
             </header>
             <nav class="menu">
                <ul>
-                   <li> <a href="trangchu.html">Trang chủ</a></li>|
+                   <li> <a href="index.html">Trang chủ</a></li>|
                    <li> <a href="danhmuc.html">Danh mục</a></li>|
                    <li> <a href="">Liên hệ</a>
                     <ul>
