--- a/danhmuc.html
+++ b/danhmuc.html
@@ -25,7 +25,7 @@
                         <li> <a href="">Hotline</a></li>
                     </ul>
                    </li>
-                   |<li> <a href="">Thông tin</a></li>|
+                   |<li> <a href="thongtin.html">Thông tin</a></li>|
                    <li><form>
                     <input type="text" name="search" placeholder="Search..">
             </form></li>
