--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                    <li> <a href="danhmuc.html">Danh mục</a></li>|
                    <li> <a href="">Liên hệ</a>
                     <ul>
-                        <li> <a href="">Facebook</a></li>
+                        <li> <a href="Facebook.html">Facebook</a></li>
                         <li> <a href="">Hotline</a></li>
                     </ul>
                    </li>
