--- a/sach1.html
+++ b/sach1.html
@@ -46,7 +46,7 @@
                         
                         <div class="sach">
                             <div class="name">Để có trí nhớ tốt</div>
-                             <a href="detail.html"><img src="image/hinh1.jpg"/></a>
+                             <a href="detal.html"><img src="image/hinh1.jpg"/></a>
                         </div>
                     </div>
                     <div class="col-20">
