--- a/danhmuc.html
+++ b/danhmuc.html
@@ -19,11 +19,8 @@
                <ul>
                    <li> <a href="index.html">Trang chủ</a></li>|
                    <li> <a href="danhmuc.html">Danh mục</a></li>|
-                   <li> <a href="">Liên hệ</a>
-                    <ul>
-                        <li> <a href="">Facebook</a></li>
-                        <li> <a href="">Hotline</a></li>
-                    </ul>
+                   <li> <a href="lienhe.html">Liên hệ</a>
+                    
                    </li>
                    |<li> <a href="thongtin.html">Thông tin</a></li>|
                    <li><form>
