--- a/thongtin.html
+++ b/thongtin.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0" nonce="1U9d1iSt"></script>
     <div id="page">
         <header>
 
@@ -21,11 +23,8 @@
             <ul>
                 <li> <a href="index.html">Trang chủ</a></li>|
                 <li> <a href="danhmuc.html">Danh mục</a></li>|
-                <li> <a href="">Liên hệ</a>
-                    <ul>
-                        <li> <a href="">Facebook</a></li>
-                        <li> <a href="">Hotline</a></li>
-                    </ul>
+                <li> <a href="lienhe.html">Liên hệ</a>
+                    
                 </li>
                 |<li> <a href="thongtin.html">Thông tin</a></li>|
                 <li>
@@ -91,11 +90,7 @@
 
             <br>
             <br>
-            <div class="u">
-                <a href="">Tất cả thể loại</a>
-            </div>
-
-            <br>
+            <div class="fb-comments" data-href="https://vanmtb.github.io/van/" data-width="" data-numposts="1"></div>
         </section>
         <footer> 2021 - Kho Sách</footer>
     </div>
